# library_system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py
src/application/: exceptions.py  repository_exceptions.py
src/application/book/: creator.py  deleter.py  reader.py  requests.py  responses.py  updater.py
src/application/book/borrowing/: creator.py  deleter.py  requests.py
src/application/book/ports/: repository.py
src/domain/: factories.py  utils.py
src/domain/book/: book.py  borrowing.py  exceptions.py  root.py  value_objects.py
src/domain/borrowing/: root.py
src/infrastructure/: api.py  orm.py
src/infrastructure/book/: _ean13.py  database_repository.py  dbo.py  in_memory_repositor.py  routes.py
src/infrastructure/book/borrowing/: dbo.py  routes.py
